[package]
name = "unsplash-api"
version = "0.1.0"
edition = "2021"

[dependencies]
http-api-client-endpoint = { version = "0.2" }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
serde-enum-str = { version = "0.2", default-features = false }
serde-aux = { version = "2.2", default-features = false }
url = { version = "2.2", default-features = false, features = ["serde"] }

serde_json = { version = "1.0", default-features = false, features = ["std"] }

thiserror = { version = "1.0", default-features = false }
