[package]
name = "unsplash-api-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "list_photos"
path = "src/list_photos.rs"

[[bin]]
name = "search_photos"
path = "src/search_photos.rs"

[dependencies]
unsplash-api = { path = ".." }

http-api-isahc-client = { version = "0.2" }

futures-lite = { version = "1.11" }
pretty_env_logger = { version = "0.4" }
